@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.20 2005/01/05 07:22:19 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.21 2005/01/05 07:52:28 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  05 Jan 2005; Preston Cody <codeman@gentoo.org>
+  Overhauled the entire ArchTemplate and did a lot of other misc fixes in order to test it.
+  Just finished mount_local_partitions in GLIArchitectureTemplate
 
   05 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added get_num_sectors() to GLIStorageDevice.
